fixed the background problem on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -94,11 +94,15 @@ a:active {
 
 html,
 body {
-  
+  height: 100%;
   width: 100%;
   background-image: url(../assets/images/back18.jpg);
   background-attachment: fixed;
   background-position: center;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 body {
   display: -ms-flexbox;
